tests/ui/codegen/evm-ir/validation/swap_out_of_range.evmir
//~? ERROR: EVM IR verification failed: block 0: `swap2` reaches depth 2 but the stack has 2
@module module

bb0:
  push 1
  push 2
  swap2
  stop
